[project]
name = "thema"
version = "0.1.3"
description = "Topological Hyperparameter Evaluation and Mapping Algorithm, by Krv Analytics "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "category-encoders>=2.8.1",
    "curvature-filtrations>=0.1.1",
    "furo[docs]>=2025.7.19",
    "hdbscan>=0.8.40",
    "ipython[docs]>=8.37.0",
    "kmapper>=2.1.0",
    "nbsphinx[docs]>=0.9.7",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "sphinx-design[docs]>=0.6.1",
    "sphinx[docs]>=8.1.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
