[project]
name = "thema"
version = "0.1.3"
description = "Topological Hyperparameter Evaluation and Mapping Algorithm, by Krv Labs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "category-encoders>=2.8.1",
    "curvature-filtrations>=0.1.1",
    "hdbscan>=0.8.40",
    "kmapper>=2.1.0",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]


[project.optional-dependencies]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "black>=25.9.0",
]

docs = [
    "furo>=2025.7.19",
    "ipython>=8.37.0",
    "nbsphinx>=0.9.7",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=0.9.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
